Fixed form z-index

--- a/src/components/form/formStyles.css
+++ b/src/components/form/formStyles.css
@@ -9,6 +9,7 @@
 	justify-content: center;
 	align-items: center;
 	background-color: rgba(0, 0, 0, 0.7);
+	z-index: 2;
 }
 
 form {
